He añadido una exclamacion

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Práctica de Git Flow</title>
+    <title>Práctica de Git Flow!</title>
 
     <script src="//code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
