changed hola por hola que tal

--- a/tab2.html
+++ b/tab2.html
@@ -12,7 +12,7 @@
       <h1>Pestaña 2</h1>
       <hr>
       <div>
-        Holaaaa
+        Hola, Qué tal estas?
       </div>
     </div>
   </body>
