Pestaña 05: He implementado un buttun

--- a/tab5.html
+++ b/tab5.html
@@ -12,7 +12,7 @@
       <h1>Pestaña 5</h1>
       <hr>
       <div>
-        ...
+        <button>Hola</button>
       </div>
     </div>
   </body>
