--- a/tab3.html
+++ b/tab3.html
@@ -13,6 +13,7 @@
       <hr>
       <div>
         <h1>HOLIIIWIII DESDE EL IES JULIAN MARIAS</h1>
+        <p>Ejemplo de texto</p>
       </div>
     </div>
   </body>
