--- a/tab3.html
+++ b/tab3.html
@@ -10,9 +10,9 @@
   <body>
     <div class="tab3">
       <h1>Pestaña 3</h1>
-      <hr>
+      <hr />
       <div>
-        <h1>HOLIIIWIII DESDE EL IES JULIAN MARIAS</h1>
+        <h1>Prueba de cambio</h1>
       </div>
     </div>
   </body>
